# InternetOfSatellites

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  receiver.c  sender.c
include/of_iface/: iface_api.h
src/: CMakeLists.txt
src/of_iface/: CMakeLists.txt  lib_receiver.c  lib_sender.c  lib_socket_utils.c
src/openfec/lib_stable/reed-solomon_gf_2_m/: of_reed-solomon_gf_2_m.h  of_reed-solomon_gf_2_m_api.c
